WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255566
(iOS) Dragging the selection in Live Text far away sometimes causes a crash
https://bugs.webkit.org/show_bug.cgi?id=255566
Summary
(iOS) Dragging the selection in Live Text far away sometimes causes a crash
Richard Robinson
Reported
2023-04-17 17:34:06 PDT
rdar://108169157
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-04-17 17:39:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12837
EWS
Comment 2
2023-04-17 19:07:24 PDT
Committed
263053@main
(f7dc489cf43a): <
https://commits.webkit.org/263053@main
> Reviewed commits have been landed. Closing PR #12837 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug